--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <input type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                  <button class="btn btn-success">SUBMIT</button>
+                  <button class="btn btn-success">ADD TODO</button>
                 </div>
             </div>
         </div>
